--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "include":["env.d.ts","src/**/*.ts","src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue", "src/router.ts"] ,
   "files": [],
   "references": [
     {
