--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -14,6 +14,7 @@
 
     "module": "ESNext",
     "moduleResolution": "Bundler",
+    "allowSyntheticDefaultImports": true,
     "types": ["node"]
   }
 }
