--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "include":["env.d.ts","src/**/*.ts","src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue", "src/router.ts"] ,
+  "exclude":["src/**/__tests__/*"],
   "files": [],
   "references": [
     {
